refactor: createWorkoutHandler, fix getUserAttr
